# drf-cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.module_name}}/: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.template.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  settings.yaml  setup.cfg
{{cookiecutter.module_name}}/entrypoint/: entrypoint.sh
{{cookiecutter.module_name}}/tests/apis/v1/serializers/: test_profile_serializer.py
{{cookiecutter.module_name}}/tests/apis/v1/views/: test_profile_view.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: apps.py  settings.py  urls.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/admin/: user.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/apis/v1/: router.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/apis/v1/serializers/: profile.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/apis/v1/views/: profile.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/apps/rest_api/: router.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/models/: user.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/settings/: __init__.py  base.py
