[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "~3.9.0"
django = "*"
psycopg2 = "*"
dynaconf = {version = "*", extras = ["yaml"]}
gunicorn = "*"
djangorestframework = "*"
markdown = "*"
django-filter = "*"
djangorestframework-simplejwt = {git = "https://github.com/SimpleJWT/django-rest-framework-simplejwt"}
drf-yasg = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
fake = "*"
mixer = "*"
pytest-cov = "*"
pytest-django = "*"
pre-commit = "*"
black = "*"
mypy = "*"
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
