[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"
django = "*"
djangorestframework = "*"
psycopg2 = "*"
gunicorn = "*"
markdown = "*"
django-filter = "*"
djangorestframework-simplejwt = "*"
django-split-settings = "*"
dj-database-url = "*"
python-decouple = "*"
sentry-sdk = "*"

[tool.poetry.dev-dependencies]
black = "*"
django-extensions = "*"
flake8 = "*"
isort = "*"
mixer = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-env = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry>={{cookiecutter.poetry_version}}"]
build-backend = "poetry.masonry.api"
