[tool.poetry]
name = "{{cookiecutter.module_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"
django = "*"
psycopg2 = "*"
gunicorn = "*"
markdown = "*"
django-filter = "*"
{% if cookiecutter.rest_framework == "django-rest-framework" %}
djangorestframework = "*"
djangorestframework-simplejwt = "*"
{% elif cookiecutter.rest_framework == "django-ninja" %}
django-ninja = "*"
{% endif %}
django-split-settings = "*"
dj-database-url = "*"
python-decouple = "*"
python-dotenv = "*"
sentry-sdk = "*"

[tool.poetry.dev-dependencies]
black = "*"
django-extensions = "*"
flake8 = "*"
isort = "*"
mixer = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-env = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry>={{cookiecutter.poetry_version}}"]
build-backend = "poetry.masonry.api"
